# event-generator

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  set_env.sh  setup.py  test_requirements.txt  visualize_results.py
.doctrees/: environment.pickle  index.doctree
_sources/: index.rst.txt
configs/: cascade_11param_noise_ftpv3m.yaml  cascade_13param_noise_tw_Spice321.yaml  cascade_14param_Spice321.yaml  cascade_14param_noise_tw_Spice321.yaml  cascade_14param_noise_tw_Spice321__small.yaml  cascade_7param_BFRv1Spice321.yaml  cascade_7param_BFRv1Spice321__small.yaml  cascade_7param_MCPE.yaml  cascade_7param_charge_only_BFRv1Spice321.yaml  cascade_7param_noise_BFRv1Spice321.yaml  cascade_7param_noise_BFRv1Spice321__small.yaml  cascade_7param_noise_ftpv3m.yaml  cascade_7param_noise_ftpv3m__ag.yaml  cascade_7param_noise_ftpv3m__big.yaml  cascade_7param_noise_ftpv3m__tiny.yaml  cascade_7param_noise_tw_BFRv1Spice321.yaml  cascade_7param_noise_tw_BFRv1Spice321__small.yaml  cascade_7param_noise_tw_BFRv1Spice321_conv.yaml  cascade_7param_noise_tw_BFRv1Spice321_low_mem.yaml  cascade_8param_Spice321.yaml  cascade_8param_noise_tw_Spice321_conv.yaml  csacade_7param_BFRv1Spice321.yaml  independent_multi_cascade_7param_noise_tw_BFRv1Spice321_low_mem_n002.yaml  muon_multi_cascade.yaml  muon_track_10cascades.yaml  single_cascade.yaml  snowstorm_cascade.yaml  snowstorm_cascade_marginalized.yaml  snowstorm_cascade_no_fourier.yaml  snowstorm_cascade_no_fourier_ensemble_00.yaml  snowstorm_cascade_no_fourier_ensemble_01.yaml  snowstorm_cascade_no_fourier_ensemble_02.yaml  snowstorm_cascade_no_fourier_flasher.yaml  snowstorm_cascade_no_fourier_marginalized.yaml  snowstorm_mixed_cascade_exclusions_no_fourier_marginalized.yaml  snowstorm_mixed_cascade_no_fourier.yaml  snowstorm_mixed_cascade_no_fourier_marginalized.yaml  snowstorm_sys_cascade_no_fourier.yaml  snowstorm_sys_mixed_cascade_no_fourier.yaml  snowstorm_track_no_fourier.yaml  (+20 more)
docs/: Makefile  make.bat
egenerator/: __about__.py  __init__.py  apply_model.py  combined.py  constants.py  create_trafo_model.py  create_training_data.py  export_manager.py  label_functions.py  misc.py  reconstruct_test_data.py  train_model.py
gcd_preprocessing/: generate_geo_pickle.py  generate_geo_pickle_added.py  geometry_pickle_run.py  geometry_pickle_tray.py
modules/: #setup.py#  file_utils.py  labels.py  misc.py  reco.py
pages/: about.html
reconstruction/: first_config.yaml  mcpe_label_function.py  reconstruction_egen.py
simulation/: check_performance.py  create_simu_yaml.py  egen_simulation.py  likelihood_calculation.py  mcpe_label_function.py  simulation_config.yaml
test/: .example_config.yaml.swp  example_config.yaml  test_constants.py  test_create_trafo_model.py  test_model_prediction.py
tests_manual/: README.txt  test.py  (+1 more)
(+414 files in other folders)
